# pio-test-runner

./: .gitignore  CHANGELOG.md  README.md  library.json  pio-test-runner.code-workspace  pyproject.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md  design.md  plan-protocol-v2.md
docs/plans/: 2026-04-09-rename.md
docs/specs/: 2026-04-09-multi-phase-design.md  2026-04-09-rename-design.md
examples/: test_custom_runner.py
include/etst/: protocol.h  test_runner.h
include/etst/doctest/: runner.h
include/pio_test_runner/: doctest_runner.h  protocol.h  test_runner.h
scripts/: pio_test_init.py
src/etst/: protocol.py  runner.py
src/pio_test_runner/: __init__.py  default_main.cpp  disconnect.py  protocol.py  ready_run_protocol.py  result_receiver.py  runner.py  serial_port.py  timing_tracker.py
tests/: conftest.py  test_disconnect.py  test_doctest_internals.cpp  test_integration.py  test_partition_hooks.py  test_protocol.py  test_ready_run_protocol.py  test_receiver_plugins.py  test_result_receiver.py  test_runner.py  test_skip_control.py  test_sleep_orchestration.py  test_timing_tracker.py
tests/acceptance/: README.md  conftest.py  helpers.py  run.sh  test_env_vars.py  test_filtering.py  test_protocol_features.py  test_sleep.py
tests/integration/: platformio.ini
tests/integration/boards/: esp32s3_devkit.ini
tests/integration/test/: board_init.cpp  main.cpp  test_custom_runner.py  test_deep_sleep.cpp  test_disconnect.cpp  test_memory_tracking.cpp  test_protocol.cpp  test_timing.cpp  test_z_deep_sleep.cpp
